# lotpal_webapis

./: .env  .gitignore  Cargo.toml  README.md
src/: api_docs.rs  auth.rs  config.rs  main.rs
src/adapters/: controllers.rs  db.rs
src/domain/: models.rs
src/usecases/: repository.rs  service.rs
