[package]
name = "lotpal_webapis"
version = "0.1.0"
edition = "2024"

[dependencies]
actix = "0.13.5"
actix-web = "4"
config = "0.15.11"
env_logger = "0.11.8"
rusqlite = { version = "0.34.0", features = ["bundled"] }
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
uuid = {version = "1.16.0", features = [ "v4", "v7", ]}
