[package]
name = "lotpal_webapis"
version = "0.1.0"
edition = "2024"
description = "Rust Web API using Actix"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
rusqlite = { version = "0.34.0", features = ["bundled"] }
uuid = {version = "1.16.0", features = [ "v4", "v7", ]}
config = "0.15.11"
env_logger = "0.11.8"
actix = "0.13.5"
actix-web = {version = "4.3.0", features= ["openssl"]}
actix-web-httpauth = "0.8.0"
openssl-sys = "0.9"
openssl = { version = "0.10.72", features = ["vendored"] }
actix-cors = "0.7.1"
rustls = "0.23.26"