[package]
name = "lotpal_webapis"
version = "0.1.0"
edition = "2024"

[dependencies]
actix = "0.13.5"
actix-web = "4"
config = "0.15.11"
env_logger = "0.11.8"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
uuid = {version = "1.16.0", features = [ "v4", "v7", ]}
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
sqlx = { version = "0.8.4", features = ["runtime-tokio-native-tls", "postgres", "chrono"] }
tokio = { version = "1.44.2", features = ["full"] }
tokio-postgres = "0.7.13"
